--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
-    "expo-device": "~4.3.0"
+    "expo-device": "~4.3.0",
+    "@expo/webpack-config": "^0.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
